More logging options(For easier testing moved to local ES, to revert: uncomment in config.js)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<script src="js/ekko-lightbox.min.js"></script>
 		<script src="js/bootstrap-slider.js"></script>
 		<script src="js/jqModal.js"></script>
+		<script src="js/pgwbrowser.min.js"></script>
 		<script src="js/config.js"></script>
 		<script src="js/pageControl.js"></script>
 		<script src="js/search.js"></script>
