created simple python server to accept user feedback + adjusted JS to send it

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				</div>
 
 				<div class="questionnaire">
-					<b><p>What went wrong when you were doing this?/p></b>
+					<b><p>What went wrong when you were doing this?</p></b>
 					<textarea cols="50" rows="3"></textarea>
 				</div>
 				<button class="btn btn-secondary" id="send-feedback-button">Submit</button>
