updated libraries + removed unused files + minor refractor

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<link rel="icon" href="img/favicon.ico">
 
 
-		<link rel="stylesheet" type="text/css" href="css/bootflat.css" />
+		<link rel="stylesheet" type="text/css" href="css/bootflat.min.css" />
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/ekko-lightbox.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/loading-animation.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/bootstrap-slider.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap-slider.min.css">
 		<link rel="stylesheet" type="text/css" href="css/jqModal.css" />
 		<link rel="stylesheet" type="text/css" href="css/main.css" />
 
@@ -23,12 +23,11 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>                       
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
-		<script src="js/elasticsearch.js"></script>
-		<script src="js/elasticsearch.jquery.js"></script>   
-		<script src="js/ekko-lightbox.min.js"></script>
-		<script src="js/bootstrap-slider.js"></script>
-		<script src="js/jqModal.js"></script>
-		<script src="js/pgwbrowser.min.js"></script>
+		<script src="js/externalLibs/elasticsearch.jquery.min.js"></script>   
+		<script src="js/externalLibs/ekko-lightbox.min.js"></script>
+		<script src="js/externalLibs/bootstrap-slider.min.js"></script>
+		<script src="js/externalLibs/jqModal.min.js"></script>
+		<script src="js/externalLibs/pgwbrowser.min.js"></script>
 		<script src="js/config.js"></script>
 		<script src="js/pageControl.js"></script>
 		<script src="js/search.js"></script>
