cleaned up Kibana graph

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
 				<div class="col-md-5">
 					<div class="form-group">
+						<span data-toggle="tooltip" title="If enabled the search will also display a graph with distribution in time. It will have no effect on devices with small screen resolution." class="glyphicon glyphicon-info-sign"></span>
 						<label for="kibanaVisualisationSwitch">Display Documents Distribution:</label>
 						<input type="checkbox" id="kibanaVisualisationSwitch">
 					</div>
