insert quotes if user forgot for proper free text search

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class='col-md-5'>
             <div class="form-group">
                 <span data-toggle="tooltip"
-                      title="This function looks for documents containing the keyword(s) you enter.  Please note that the results may not be accurate, it is dependant on the quality of scanned document and whether the spelling within the document matches the word you entered."
+                      title="This function looks for documents containing the keyword(s) you enter. You can combine them using logical operators such as 'AND' or 'OR'."
                       class="glyphicon glyphicon-info-sign"></span>
                 <label for="containingKeywords">Containing:</label>
                 <input class="form-control input-sm" id="containingKeywords" type="text"
